<resources>
    <string name="app_name">UPB</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>


    <string name="loading">Loading</string>

    <string name="ip">IP</string>
    <string name="port">Port</string>

    <string name="text_ip">192.168.0.183</string>
    <string name="text_port">3001</string>

    <string name="error_generic">An error has occurred.</string>
    <string name="error_user_taken">Username is already taken.</string>
    <string name="error_user_auth">Incorrect username or password.</string>
    <string name="success_login">Login successful.</string>
    <string name="success_register">Registration successful.</string>
</resources>
